--- a/contacto.html
+++ b/contacto.html
@@ -73,18 +73,26 @@
       <div class="body-content">        
         <div class="row justify-content-center py-4">
           <div class="col-lg-6">
-              <h1>Contacto</h1>
-              <div class="card">
+            <div class="row">
+              <div class="col-12">    
+                <h1>Contacto</h1>
+                <div class="card">
                   <div class="card-body">
-                      <p class="text-left">
-                          Nos encanta saber de vosotros/as🤗<br>
-                          Cualquier cosa que queráis decirnos no dudéis en escribirnos a<br>
-                      </p>
-                      <p class="text-center">
-                          <a href="mailto:contacto@creandojuntos.org">✉️ contacto@creandojuntos.org ✉️</a>
-                      </p>
+                    <h5 class="card-title title-2">¿Tienes algo que contarnos?</h5>
+                    <p class="text-left">
+                      Nos encanta saber de vosotros/as🤗<br>
+                      Cualquier cosa que queráis decirnos no dudéis en escribirnos a<br>
+                    </p>
+                    <a href="mailto:contacto@creandojuntos.org" class="card-link">✉️ contacto@creandojuntos.org ✉️</a>
                   </div>
+                </div>
               </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                  <img src="imgs/carousel_01.jpg" alt="Sobre" class="border hover-pop w-100 pt-4">
+              </div>
+            </div>
           </div>
         </div>
       </div>
