--- a/donaciones.html
+++ b/donaciones.html
@@ -72,7 +72,21 @@
       </nav>
       <div class="body-content">        
         <div class="row justify-content-center py-4">
-
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-12">        
+                  <h1>Donaciones</h1>
+                  <p>
+                      Creando juntos aún no dispone de cuenta bancaria, en cuanto lo haga estaremos enormemente agradecidos de recibir tu granito de arena.
+                  </p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                  <img src="imgs/heart.jpg" alt="Corazón" class="border hover-pop w-100">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row py-3 px-3 footer">
