--- a/hazteVoluntario.html
+++ b/hazteVoluntario.html
@@ -72,7 +72,27 @@
       </nav>
       <div class="body-content">        
         <div class="row justify-content-center py-4">
-
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-12">
+                  <h1 class="title title-2">Hazte voluntario</h1>
+                  <div class="card mt-3">
+                    <div class="card-body">
+                      <h5 class="card-title title-2">¿Estás pensando en hacerte voluntario/a?</h5>
+                      <p class="card-text">            
+                          Si te gustaría <b>participar</b> en alguno de nuestros proyectos o si te lo estás pensando y te gustaría recibir más información <b>no dudues en escribirnos</b> a nuestro teléfono de contacto:
+                      </p>
+                      <a href="mailto:contacto@creandojuntos.org" class="card-link">✉️ contacto@creandojuntos.org ✉️</a>
+                    </div>
+                  </div>
+              </div>
+            </div>
+            <div class="row pt-4">
+              <div class="col-12">
+                  <img src="imgs/hug.jpg" alt="Abrazo" class="border hover-pop w-100">
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="row py-3 px-3 footer">
