--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <div class="col-lg-12 pt-2">
                 <h1 class="pt-4 title pb-2 title-1">Colabora</h1>
                 <div class="row">
-                  <div class="col-lg-6 pt-4">          
+                  <div class="col-lg-6 pt-4 pt-lg-2">          
                     <div class="card rounded-bottom">
                       <img class="card-img-top rounded-top" src="imgs/hand.jpg" alt="Colabora">
                       <div class="card-body">
@@ -141,7 +141,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-6 pt-4">
+                  <div class="col-lg-6 pt-4 pt-lg-2">
                     <div class="card rounded-bottom">
                       <img class="card-img-top rounded-top" src="imgs/sand.jpg" alt="Tu grano de arena">
                       <div class="card-body">
