--- a/transparencia.html
+++ b/transparencia.html
@@ -80,22 +80,7 @@
             <div class="row">    
               <div class="col-lg-4 text-left">
                 <a href="files/EstatutosACJ.pdf">
-                  <img src="icons/file-earmark.svg" alt="file icon" class="i-file">Estatutos de la asociación
-                </a>
-              </div>
-              <div class="col-lg-4 text-left">
-                <a href="files/EstatutosACJ.pdf">
-                  <img src="icons/file-earmark.svg" alt="file icon" class="i-file">Estatutos de la asociación
-                </a>
-              </div>
-              <div class="col-lg-4 text-left">
-                <a href="files/EstatutosACJ.pdf">
-                  <img src="icons/file-earmark.svg" alt="file icon" class="i-file">Estatutos de la asociación
-                </a>
-              </div>
-              <div class="col-lg-4 text-left">
-                <a href="files/EstatutosACJ.pdf">
-                  <img src="icons/file-earmark.svg" alt="file icon" class="i-file">Estatutos de la asociación
+                  <img src="icons/file-earmark-arrow-down.svg" alt="file icon" class="i-file mr-1">Estatutos de la asociación
                 </a>
               </div>
             </div>
