--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CreandoJuntos</title>
-    <link rel="icon" href="imgs/Logo_64.png">
+    <link rel="icon" href="imgs/logo_64px.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="./static/style.css" rel="stylesheet">
   </head>
@@ -16,7 +16,7 @@
     <div class="container">      
       <nav class="row px-4 header-row justify-content-between">             
         <div class="col-2 text-left">
-<img src="imgs/Logo_64.png" alt="logo" height="48" width="48" class="hover-pop my-2">
+<img src="imgs/logo_64px.png" alt="logo" height="48" width="48" class="hover-pop my-2">
         </div>
         
         <div class="col-10 d-lg-block d-none">
