--- a/contacto.html
+++ b/contacto.html
@@ -90,7 +90,7 @@
             </div>
             <div class="row">
               <div class="col-12">
-                  <img src="imgs/carousel_01.jpg" alt="Sobre" class="border hover-pop w-100 pt-4">
+                <img src="imgs/carousel_01.jpg" alt="Sobre" class="border hover-pop w-100 mt-4">
               </div>
             </div>
           </div>
