--- a/proyectos.html
+++ b/proyectos.html
@@ -92,7 +92,7 @@
             <img src="imgs/hug.jpg" class="border hover-pop" alt="Foto del equipo" class="w-100">
           </div>
           <div class="col-lg-10 text-left pt-4">         
-            Estas actividades las realizamos los <b>viernes de 17:00 a 19:00</b>, si estás interesado en participar como monitor <a href="hazteVoluntario.html">hazte voluntario/a</a>.
+            Estas actividades las realizamos los <b>viernes de 17:00 a 19:00</b>, si estás interesado en participar como monitor, <a href="hazteVoluntario.html">hazte voluntario/a</a>.
             <br><br>
             Si deseas <b>contribuir al desarrollo</b> de estas actividades siempre puedes <a href="donaciones.html">apoyarnos económicamente</a>.
           </div>
