--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -76,7 +76,7 @@
             <h1>¿ Quiénes somos ?</h1>
             <div class="text-left">
               Somos un grupo de <b>jóvenes universitarios</b> comprometidos en crear un mundo un poco más justo.<br><br>
-              Con nuestro <b>esfuerzo</b> intentamos contribuir a la <b>inclusión social</b>, así como ayudar a los niños más desfavorecidos. Brindándoles un apoyo escolar, lúdico y social. Queremos hacer todo lo que esté en nuestra mano para <b>fortalecer el futuro</b> de estos niños a los que les han faltado las oportunidades.
+              Con nuestro <b>esfuerzo</b> intentamos contribuir a la <b>inclusión social</b>, así como ayudar a los niños más desfavorecidos brindándoles un apoyo escolar, lúdico y social. Queremos hacer todo lo que esté en nuestra mano para <b>fortalecer el futuro</b> de estos niños a los que les han faltado las oportunidades.
             </div>
           </div>
           <div class="col-lg-4 d-flex flex-column justify-content-center pt-4">
