--- a/proyectos.html
+++ b/proyectos.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="./static/script.js"></script>
-    <div class="container">      
+    <div class="container">  
       <nav class="row px-4 header-row justify-content-between">             
         <div class="col-2 text-left">
 <a href="index.html"><img src="imgs/logo_64px.png" alt="logo" height="48" width="48" class="hover-pop my-2"></a>
@@ -70,8 +70,9 @@
           </ul>
         </div>
       </nav>
-      <div class="body-content">        
-        <div class="row justify-content-center py-4">
+      <div class="content-wrap">        
+        <div class="body-content">        
+          <div class="row justify-content-center py-4">
           <div class="col-lg-10"><h1>Creando inclusión</h1></div>
           <div class="col-lg-10 text-left">
             <b class="text-size-2">Asistencia a menores con discapacidad y apoyo escolar a niños y niñas en riesgo de exclusión social.</b><br><br>
@@ -81,11 +82,12 @@
             <div class="text-left"> 
               Nuestro objetivo es ayudarles a <b>superar las dificultades</b> a las que se enfrentan en su día a día. Además, en estas actividades brindamos a los niños que lo precisan de <b>apoyo escolar</b> en forma de <b>ayuda en el estudio</b>.<br><br>
               <b>Cada semana</b> preparamos actividades que traten de ayudar a los niños a potenciar alguna de las siguientes habilidades:<br>
-              <img src="icons/arrow-right-short.svg" alt="-"> Cultura general<br>
               <img src="icons/arrow-right-short.svg" alt="-"> Autonomía<br>
               <img src="icons/arrow-right-short.svg" alt="-"> Creatividad<br>
-              <img src="icons/arrow-right-short.svg" alt="-"> Ocio<br>
-              <img src="icons/arrow-right-short.svg" alt="-"> Habilidades sociales<br><br> 
+              <img src="icons/arrow-right-short.svg" alt="-"> Comunicación<br>
+              <img src="icons/arrow-right-short.svg" alt="-"> Cultura general<br>
+              <img src="icons/arrow-right-short.svg" alt="-"> Habilidades sociales<br>
+              <img src="icons/arrow-right-short.svg" alt="-"> Ocio<br> 
             </div>
           </div>
           <div class="col-lg-4 d-flex flex-column justify-content-center">
@@ -95,6 +97,7 @@
             Estas actividades las realizamos los <b>viernes de 17:00 a 19:00</b>, si estás interesado en participar como monitor, <a href="hazteVoluntario.html">hazte voluntario/a</a>.
             <br><br>
             Si deseas <b>contribuir al desarrollo</b> de estas actividades siempre puedes <a href="donaciones.html">apoyarnos económicamente</a>.
+          </div>
           </div>
         </div>
       </div>
