--- a/transparencia.html
+++ b/transparencia.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="./static/script.js"></script>
-    <div class="container">      
+    <div class="container">  
       <nav class="row px-4 header-row justify-content-between">             
         <div class="col-2 text-left">
 <a href="index.html"><img src="imgs/logo_64px.png" alt="logo" height="48" width="48" class="hover-pop my-2"></a>
@@ -70,8 +70,9 @@
           </ul>
         </div>
       </nav>
-      <div class="body-content">        
-        <div class="row justify-content-center py-4">
+      <div class="content-wrap">        
+        <div class="body-content">        
+          <div class="row justify-content-center py-4">
           <div class="col-lg-10">
             <h1>Transparencia</h1>
             <p class="text-justify">En <b>Creando Juntos</b> creemos que ser transparentes nos hace más honestos y nos ayuda a mejorar la calidad de todo lo que hacemos. Compartimos con nuestros socios, voluntarios y donantes toda la información económica de la asociación, así como el desarrollo y resultado de las actividades y proyectos que realizamos.</p>
@@ -84,6 +85,7 @@
                 </a>
               </div>
             </div>
+          </div>
           </div>
         </div>
       </div>
