--- a/politicaDeCookies.html
+++ b/politicaDeCookies.html
@@ -73,7 +73,16 @@
       <div class="content-wrap">        
         <div class="body-content">        
           <div class="row justify-content-center py-4">
-
+          <div class="col-lg-12">
+              <h1 class="title title-2">No usamos cookies</h1>
+          </div>
+          <div class="col-lg-5 pt-2">
+              <p>
+                  Nuestra página web <b>NO UTILIZA COOKIES</b>.<br>
+                  En <b>Asociación Creando Juntos</b> nos preocupa tu privacidad. No tenemos ninguna necesidad de llenar tu ordenador con cookies inútiles que faciliten tu rastreo por internet.<br>
+                  Podemos por tanto afirmar con orgullo que nuestra web no utiliza cookies.
+              </p>
+          </div>
           </div>
         </div>
       </div>
@@ -85,10 +94,16 @@
           </a>
         </div>
         <div class="col-lg-4 pt-2 pt-lg-0 text-lg-center">© Creando Juntos 2023</div>
-        <div class="col-lg-4 pt-2 pt-lg-0 text-lg-right">
-          <a href="avisoLegal.html">Aviso legal</a> | 
-          <a href="politicaDePrivacidad.html">Política de privacidad</a> | 
-          <a href="politicaDeCookies.html">Política de cookies</a>
+        <div class="col-lg-4 pt-2 pt-lg-0">
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="avisoLegal.html" class="text-size-small">Aviso legal</a>
+          </div>
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="politicaDePrivacidad.html" class="text-size-small">Política de privacidad</a>
+          </div>
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="politicaDeCookies.html" class="text-size-small">Política de cookies</a>
+          </div>
         </div>
       </div>
     </div>
