--- a/transparencia.html
+++ b/transparencia.html
@@ -74,15 +74,34 @@
         <div class="body-content">        
           <div class="row justify-content-center py-4">
           <div class="col-lg-10">
-            <h1>Transparencia</h1>
-            <p class="text-justify">En <b>Creando Juntos</b> creemos que ser transparentes nos hace más honestos y nos ayuda a mejorar la calidad de todo lo que hacemos. Compartimos con nuestros socios, voluntarios y donantes toda la información económica de la asociación, así como el desarrollo y resultado de las actividades y proyectos que realizamos.</p>
-            <h1 class="pt-4">Documentos</h1>
-            <p class="text-justify">Es por ello que en esta sección hacemos públicos los siguientes documentos:</p>
-            <div class="row">    
-              <div class="col-lg-4 text-left">
-                <a href="files/EstatutosACJ.pdf">
-                  <img src="icons/file-earmark-arrow-down.svg" alt="file icon" class="i-file mr-1">Estatutos de la asociación
-                </a>
+            <div class="row">
+              <div class="col-12">
+                <h1>Transparencia</h1>
+                <p class="text-justify">En <b>Creando Juntos</b> creemos que ser transparentes nos hace más honestos y nos ayuda a mejorar la calidad de todo lo que hacemos. Compartimos con nuestros socios, voluntarios y donantes toda la información económica de la asociación, así como el desarrollo y resultado de las actividades y proyectos que realizamos.</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-6">
+                <h1 class="pt-4">Documentos</h1>
+                <p class="text-justify">Es por ello que en esta sección hacemos públicos los siguientes documentos:</p>
+                <div class="row">    
+                  <div class="col-12 text-left">
+                    <a href="files/EstatutosACJ.pdf" class="pb-2">
+                      <img src="icons/file-earmark-arrow-down.svg" alt="file icon" class="i-file mr-1">Estatutos de la asociación
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <h1 class="pt-4">Datos</h1>
+                <div class="row">
+                  <div class="col-12 text-left px-0">
+                    <ul>
+                      <li>Razón social: Asociación Creando Juntos</li>
+                      <li>CIF: G-56354848</li>
+                    </ul>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -97,10 +116,16 @@
           </a>
         </div>
         <div class="col-lg-4 pt-2 pt-lg-0 text-lg-center">© Creando Juntos 2023</div>
-        <div class="col-lg-4 pt-2 pt-lg-0 text-lg-right">
-          <a href="avisoLegal.html">Aviso legal</a> | 
-          <a href="politicaDePrivacidad.html">Política de privacidad</a> | 
-          <a href="politicaDeCookies.html">Política de cookies</a>
+        <div class="col-lg-4 pt-2 pt-lg-0">
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="avisoLegal.html" class="text-size-small">Aviso legal</a>
+          </div>
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="politicaDePrivacidad.html" class="text-size-small">Política de privacidad</a>
+          </div>
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="politicaDeCookies.html" class="text-size-small">Política de cookies</a>
+          </div>
         </div>
       </div>
     </div>
