--- a/hazteVoluntario.html
+++ b/hazteVoluntario.html
@@ -83,7 +83,7 @@
                       <p class="card-text">            
                           Si te gustaría <b>participar</b> en alguno de nuestros proyectos o si te lo estás pensando y te gustaría recibir más información <b>no dudues en escribirnos</b> a nuestro teléfono de contacto:
                       </p>
-                      <a href="mailto:contacto@creandojuntos.org" class="card-link">✉️ contacto@creandojuntos.org ✉️</a>
+                      <a href="mailto:creandojuntostemporal@gmail.com" class="card-link">✉️ creandojuntostemporal@gmail.com ✉️</a>
                     </div>
                   </div>
               </div>
@@ -105,10 +105,16 @@
           </a>
         </div>
         <div class="col-lg-4 pt-2 pt-lg-0 text-lg-center">© Creando Juntos 2023</div>
-        <div class="col-lg-4 pt-2 pt-lg-0 text-lg-right">
-          <a href="avisoLegal.html">Aviso legal</a> | 
-          <a href="politicaDePrivacidad.html">Política de privacidad</a> | 
-          <a href="politicaDeCookies.html">Política de cookies</a>
+        <div class="col-lg-4 pt-2 pt-lg-0">
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="avisoLegal.html" class="text-size-small">Aviso legal</a>
+          </div>
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="politicaDePrivacidad.html" class="text-size-small">Política de privacidad</a>
+          </div>
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="politicaDeCookies.html" class="text-size-small">Política de cookies</a>
+          </div>
         </div>
       </div>
     </div>
