--- a/politicaDePrivacidad.html
+++ b/politicaDePrivacidad.html
@@ -73,7 +73,15 @@
       <div class="content-wrap">        
         <div class="body-content">        
           <div class="row justify-content-center py-4">
-
+          <div class="col-lg-12">
+              <h1 class="title title-2">No recaudamos datos</h1>
+          </div>
+          <div class="col-lg-8 pt-4">
+              <p>
+                  Nuestra página web <b>NO RECAUDA NINGÚN TIPO DE DATO</b>.<br>
+                  En <b>Asociación Creando Juntos</b> nos preocupa tu privacidad. Nuestra web es meramente informativa y no tenemos ninguna necesidad de guardar ningún dato sobre tí.
+              </p>
+          </div>
           </div>
         </div>
       </div>
@@ -85,10 +93,16 @@
           </a>
         </div>
         <div class="col-lg-4 pt-2 pt-lg-0 text-lg-center">© Creando Juntos 2023</div>
-        <div class="col-lg-4 pt-2 pt-lg-0 text-lg-right">
-          <a href="avisoLegal.html">Aviso legal</a> | 
-          <a href="politicaDePrivacidad.html">Política de privacidad</a> | 
-          <a href="politicaDeCookies.html">Política de cookies</a>
+        <div class="col-lg-4 pt-2 pt-lg-0">
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="avisoLegal.html" class="text-size-small">Aviso legal</a>
+          </div>
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="politicaDePrivacidad.html" class="text-size-small">Política de privacidad</a>
+          </div>
+          <div class="row justify-content-lg-end justify-content-center">
+            <a href="politicaDeCookies.html" class="text-size-small">Política de cookies</a>
+          </div>
         </div>
       </div>
     </div>
