--- a/hazteVoluntario.html
+++ b/hazteVoluntario.html
@@ -124,7 +124,7 @@
           <div class="card-body">
             <h5 class="card-title title-2">¿Estás pensando en hacerte voluntario/a?</h5>
             <p class="card-text">            
-                Si te gustaría <b>participar</b> en alguno de nuestros proyectos o si te lo estás pensando y te gustaría recibir más información <b>no dudues en escribirnos</b> a nuestro teléfono de contacto:
+                Si te gustaría <b>participar</b> en alguno de nuestros proyectos o si te lo estás pensando y te gustaría recibir más información <b>no dudues en escribirnos</b> a nuestro correo de contacto:
             </p>
             <a href="mailto:creandojuntostemporal@gmail.com" class="card-link">✉️ creandojuntostemporal@gmail.com ✉️</a>
           </div>
