--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <img class="card-img-top rounded-top" src="imgs/hug.jpg" alt="Abrazo">
         <div class="card-body">
           <h5 class="card-title title-2">Creando inclusión</h5>
-          <p class="card-text">Realizamos talleres para niños y niñas con discapacidad en la Cañada Real. Con estos talleres tratamos de fortalecer aspectos tan importantes como las habilidades sociales.</p>
+          <p class="card-text">Realizamos talleres para niños, niñas y adolescentes con discapacidad residentes en la Cañada Real. Con estos talleres tratamos de fortalecer aspectos tan importantes como las habilidades sociales.</p>
           <a href="proyectos.html" class="card-link">Leer más</a>              
         </div>
       </div>
