--- a/politicaDePrivacidad.html
+++ b/politicaDePrivacidad.html
@@ -122,7 +122,8 @@
 <div class="col-lg-8 pt-4">
     <p>
         Nuestra página web <b>NO RECAUDA NINGÚN TIPO DE DATO</b>.<br>
-        En <b>Asociación Creando Juntos</b> nos preocupa tu privacidad. Nuestra web es meramente informativa y no tenemos ninguna necesidad de guardar ningún dato sobre tí.
+        En <b>Asociación Creando Juntos</b> nos preocupa tu privacidad.<br>
+        Nuestra web es meramente informativa y no tenemos ninguna necesidad de guardar ningún dato sobre tí.
     </p>
 </div>
 
