--- a/proyectos.html
+++ b/proyectos.html
@@ -118,13 +118,13 @@
             
 <div class="col-lg-10"><h1>Creando inclusión</h1></div>
 <div class="col-lg-10 text-left">
-  <b class="text-size-2">Asistencia a menores con discapacidad y apoyo escolar a niños y niñas en riesgo de exclusión social.</b><br><br>
-  Nuestro proyecto principal consiste en preparar 2 horas a la semana de actividades para niños y niñas de la <b>Cañada Real Galiana</b>. Más de la mitad de estos niños y niñas tienen algún grado de <b>discapacidad</b>.<br><br>
+  <b class="text-size-2">Asistencia a niños, niñas y adolescentes con discapacidad y/o en riesgo de exclusión social.</b><br><br>
+  Nuestro proyecto principal consiste en preparar 2 horas a la semana de actividades para niños, niñas y adolescentes residentes en la <b>Cañada Real Galiana</b>. Más de la mitad de ellos/as tienen algún grado de <b>discapacidad</b>.<br><br>
 </div>
 <div class="col-lg-6 d-flex flex-column justify-content-center">
   <div class="text-left"> 
-    Nuestro objetivo es ayudarles a <b>superar las dificultades</b> a las que se enfrentan en su día a día. Además, en estas actividades brindamos a los niños que lo precisan de <b>apoyo escolar</b> en forma de <b>ayuda en el estudio</b>.<br><br>
-    <b>Cada semana</b> preparamos actividades que traten de ayudar a los niños a potenciar alguna de las siguientes habilidades:<br>
+    Nuestro objetivo es ayudarles a <b>superar las dificultades</b> a las que se enfrentan en su día a día. Además, en estas actividades brindamos a los niños y niñas que lo precisan de <b>apoyo escolar</b> en forma de <b>ayuda en el estudio</b>.<br><br>
+    <b>Cada semana</b> preparamos actividades que traten de ayudar a los niños y niñas a potenciar alguna de las siguientes habilidades:<br>
     <img src="icons/arrow-right-short.svg" alt="-"> Autonomía<br>
     <img src="icons/arrow-right-short.svg" alt="-"> Creatividad<br>
     <img src="icons/arrow-right-short.svg" alt="-"> Comunicación<br>
@@ -137,7 +137,7 @@
   <img src="imgs/hug.jpg" class="border hover-pop" alt="Foto del equipo" class="w-100">
 </div>
 <div class="col-lg-10 text-left pt-4">         
-  Estas actividades las realizamos los <b>viernes de 17:00 a 19:00</b>, si estás interesado en participar como monitor, <a href="hazteVoluntario.html">hazte voluntario/a</a>.
+  Estas actividades las realizamos los <b>viernes de 17:00 a 19:00</b>, si estás interesado en participar como monitor/monitora, <a href="hazteVoluntario.html">hazte voluntario/a</a>.
   <br><br>
   Si deseas <b>contribuir al desarrollo</b> de estas actividades siempre puedes <a href="donaciones.html">apoyarnos económicamente</a>.
 </div>
