--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -119,8 +119,8 @@
 <div class="col-lg-6 d-flex flex-column justify-content-center">
   <h1>¿ Quiénes somos ?</h1>
   <div class="text-left">
-    Somos un grupo de <b>jóvenes universitarios</b> comprometidos en crear un mundo un poco más justo.<br><br>
-    Con nuestro <b>esfuerzo</b> intentamos contribuir a la <b>inclusión social</b>, así como ayudar a los niños más desfavorecidos brindándoles un apoyo escolar, lúdico y social. Queremos hacer todo lo que esté en nuestra mano para <b>fortalecer el futuro</b> de estos niños a los que les han faltado las oportunidades.
+    Somos un grupo de <b>jóvenes universitarios y universitarias</b> comprometidos/as en crear un mundo un poco más justo.<br><br>
+    Con nuestro <b>esfuerzo</b> intentamos contribuir a la <b>inclusión social</b>, así como ayudar a los niños, niñas y adolescentes más desfavorecidos/as brindándoles un apoyo escolar, lúdico y social. Queremos hacer todo lo que esté en nuestra mano para <b>fortalecer el futuro</b> de estos niños y niñas a los/las que les han faltado las oportunidades.
   </div>
 </div>
 <div class="col-lg-4 d-flex flex-column justify-content-center pt-4">
@@ -133,7 +133,7 @@
   <h1>¿ Qué es Creando juntos ?</h1>
   <div class="text-left pt-4">
     Creando juntos es una <b>asociación sin ánimo de lucro</b> registrada en la <b>Comunidad de Madrid</b>.<br><br>
-    Con <b>dos años de experiencia</b> trabajando en un proyecto de otra ONG tenemos ganas de seguir aportando nuestro granito de arena.
+    Nuestra misión es contribuir a <b>reducir las desigualdades sociales</b> que encontremos en nuestro camino.
   </div>
 </div>
 <div class="col-lg-4 flex-column justify-content-center pt-4 d-flex d-lg-none">
