--- a/transparencia.html
+++ b/transparencia.html
@@ -120,7 +120,7 @@
   <div class="row">
     <div class="col-12">
       <h1>Transparencia</h1>
-      <p class="text-justify">En <b>Creando Juntos</b> creemos que ser transparentes nos hace más honestos y nos ayuda a mejorar la calidad de todo lo que hacemos. Compartimos con nuestros socios, voluntarios y donantes toda la información económica de la asociación, así como el desarrollo y resultado de las actividades y proyectos que realizamos.</p>
+      <p class="text-justify">En <b>Creando Juntos</b> creemos que ser transparentes nos hace más honestos/as y nos ayuda a mejorar la calidad de todo lo que hacemos. Compartimos con nuestros socios/as, voluntarios/as y donantes la información económica de la asociación, así como el desarrollo y resultado de las actividades y proyectos que realizamos.</p>
     </div>
   </div>
   <div class="row">
