--- a/quienesSomos.html
+++ b/quienesSomos.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Asociación Creando Juntos" />
     <meta property="og:description" content="Asociación Creando Juntos es una entidad sin ánimo de lucro, cuyo objetivo es velar por la inclusión y cuidar de los niños, niñas y adolescentes más vulnerables." />
-    <meta property="og:image" content="./imgs/logo_64px.png" />
+    <meta property="og:image" content="https://pabloqb2000.github.io/CreandoJuntos/imgs/logo_512px.png" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="./static/style.css" rel="stylesheet">
